# File-Manager

./: .gitignore  FileManager.spec  FileManagerApp.spec  README.md  check_sg.py  cli.py  gui.py  gui_entry.py  gui_tk.py  pyproject.toml  requirements.txt  tmp_check_png.py  tmp_png_dryrun.py  undo_preview.py
file_manager/: __init__.py  deduper.py  organizer.py  organizer_impl.py  reporter.py  scanner.py  utils.py
installer/: app.iss  build_windows.ps1
tests/: validate_app.py
