[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-manager"
version = "0.1.0"
description = "Safe file organizer CLI + optional Tkinter GUI"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
file-manager-gui = "gui_entry:main"
